Fixed particles clipping over contact section content

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -168,7 +168,6 @@ section {
   .card {
     background-color: $bg-primary;
     color: $text-primary;
-    border: 4px solid $link-primary;
 
     .experience-content {
       .experience-heading {
@@ -255,5 +254,13 @@ section {
         transition: max-height $text-transition-duration ease-in;
       }
     }
+  }
+}
+
+#contact {
+  h3,
+  .contact-content {
+    position: relative;
+    z-index: 1;
   }
 }
